# Jovia

./: .gitignore  Cargo.toml  README.md  app.py  chat.lmql  command_list_data.jsonl  requirements.txt
.github/: FUNDING.yml
addons/jovia/: jovia_chat.gd  jovia_test.gd  plugin.gd
binding/: Cargo.toml
binding/src/: lib.rs
examples/text_generation/: Jovia.gd  icon.svg.import  jovia_test.tscn  project.godot  text_generation.gdextension
examples/text_generation/addons/jovia/: jovia_chat.tscn  jovia_test.tscn  plugin.cfg
inference/: Cargo.toml
inference/src/: bert.rs  embedding.rs  lib.rs  phi2.rs  text_generation.rs
lmql-queries/: chat.lmql
queries/: queries.py
scripts/: init_vectordb.py
server/: Cargo.toml  __init__.py  __main__.py  chatserver.py  output.py  test_messages.jsonl
server/src/: main.rs
src/: Dockerfile  LICENSE
src/binding/: Cargo.toml
src/binding/src/: lib.rs
src/inference/: Cargo.toml
src/inference/src/: lib.rs
util/: input_filtering.py  prompts.py  test_messages.jsonl  vector_db.py  vector_ops.py  ws_client.py
