[workspace]
resolver = "2"

members = [ "binding", "inference","server",]

[workspace.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.3" }

