[package]
name = "binding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"] }
inference = { path = "../inference" }
candle-core = { version = "0.3.3", workspace = true }
candle-nn = { version = "0.3.3", workspace = true }
candle-transformers = { version = "0.3.3", workspace = true }
