[package]
name = "inference"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
candle-core = { version = "0.3.3", workspace = true }#, features = ["cuda"] }
candle-nn = { version = "0.3.3", workspace = true }
candle-transformers = { version = "0.3.3", workspace = true }
hf-hub = "0.3.2"
serde_json = "1.0.113"
tokenizers = "0.15.1"

[features]
cuda = ["candle-core/cuda"]
