[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-web = "4.4.1"
actix-web-actors = "4.2.0"
anyhow = "1.0.79"
inference = { version = "0.1.0", path = "../inference" }
qdrant-client = "1.7.0"
tokio = "1.35.1"
